Fix spacing, consistent info boxes, migrate to fix wakechange model

--- a/admin_site/static/css/wake_plan.css
+++ b/admin_site/static/css/wake_plan.css
@@ -1,3 +1,7 @@
 .form-switch .form-check-input {
   margin-left: 0;
 }
+
+.form-switch {
+  padding-left: 0px;
+}
